other/remove-hostpath-volumes/.chainsaw-test/not-pod-patched05.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod05
  namespace: remove-hostpathvols-ns
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox02
    image: busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: foo
  - name: busybox03
    image: busybox:1.35
  volumes:
  - name: foo
    hostPath:
      path: /data/junk
