other/remove-hostpath-volumes/.chainsaw-test/pod-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: remove-hostpathvols-ns
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: empty
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: empty
  - name: busybox03
    image: ghcr.io/kyverno/test-busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: empty
  volumes:
  - name: empty
    emptyDir:
      medium: memory
      sizeLimit: 20Mi
