other/remove-hostpath-volumes/.chainsaw-test/pod-patched04.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod04
  namespace: remove-hostpathvols-ns
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: config-vol
  - name: busybox02
    image: busybox:1.35
  - name: busybox03
    image: busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: empty
  volumes:
  - name: empty
    emptyDir:
      medium: memory
      sizeLimit: 20Mi
  - name: config-vol
    configMap:
      name: foo
      items:
        - key: foo
          path: bar
